--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
+.cache/    
 .idea/
 .vs/
 .vscode/
 build/
 cmake-build-*/
-prefix/
-**/.DS_Store
-CMakeLists.txt.user
-CMakeUserPresets.json
-include/um2/config.hpp
-.cache/    
-env/    
 docs/_build/    
 docs/_static/    
 docs/_templates/    
 docs/html/    
 docs/latex/    
 docs/Doxyfile.bak
-tests/physics/xslibs/*
+env/    
+include/um2/config.hpp
+prefix/
+CMakeLists.txt.user
+CMakeUserPresets.json
+MPACT_Extras/
+**/.DS_Store
