--- a/tests/physics/CMakeLists.txt
+++ b/tests/physics/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_um2_test(./cross_section.cpp)
 add_um2_test(./nuclide.cpp)
-#add_um2_test(./cross_section_library.cpp)
+add_um2_test(./cross_section_library.cpp)
