--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -1,8 +1,9 @@
-add_um2_test(./utility.cpp)
-add_um2_test(./algorithm.cpp)
-add_um2_test(./math.cpp)
-add_um2_test(./memory.cpp)
-add_um2_test(./numeric.cpp)
-add_um2_test(./vector.cpp)
-add_um2_test(./sto.cpp)
-add_um2_test(./string.cpp)
+add_subdirectory(./utility)
+add_subdirectory(./algorithm)
+#add_um2_test(./algorithm.cpp)
+#add_um2_test(./math.cpp)
+#add_um2_test(./memory.cpp)
+#add_um2_test(./numeric.cpp)
+#add_um2_test(./vector.cpp)
+#add_um2_test(./sto.cpp)
+#add_um2_test(./string.cpp)
