--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -1,8 +1,7 @@
+add_subdirectory(./memory)
 add_subdirectory(./utility)
+add_subdirectory(./math)
 add_subdirectory(./algorithm)
-#add_um2_test(./algorithm.cpp)
-#add_um2_test(./math.cpp)
-#add_um2_test(./memory.cpp)
 #add_um2_test(./numeric.cpp)
 #add_um2_test(./vector.cpp)
 #add_um2_test(./sto.cpp)
