--- a/tests/stdlib/algorithm/CMakeLists.txt
+++ b/tests/stdlib/algorithm/CMakeLists.txt
@@ -1,2 +1,7 @@
 add_um2_test(./clamp.cpp)
 add_um2_test(./copy.cpp)
+add_um2_test(./fill.cpp)
+add_um2_test(./is_sorted.cpp)
+add_um2_test(./max.cpp)
+add_um2_test(./max_element.cpp)
+add_um2_test(./min.cpp)
