--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -31,7 +31,7 @@
 ////==============================================================================
 //
 //#include <concepts> // std::same_as
-//#include <cstdint> // int32_t, int64_t
+#include <cstdint> // int32_t, int64_t
 //
 //#if UM2_USE_OPENMP
 //#  include <omp.h>
@@ -105,43 +105,43 @@
 #  define GLOBAL
 #endif
 
-////==============================================================================
-//// Typedefs
-////==============================================================================
-//
-//// Floating point type
-//#if UM2_ENABLE_FLOAT64
-//using Float = double;
-//#else
-//using Float = float;
-//#endif
-//
-//// Integer type
-//#if UM2_ENABLE_INT64
-//using Int = int64_t;
-//HOSTDEV consteval auto
-//intMax() noexcept -> Int
-//{
-//  return INT64_MAX;
-//}
-//#else
-//using Int = int32_t;
-//HOSTDEV consteval auto
-//intMax() noexcept -> Int
-//{
-//  return INT32_MAX;
-//}
-//#endif
-//
-//// Integer type for material IDs.
-//// We don't expect more than 127 materials, so we use int8_t.
-//using MatID = int8_t;
-//HOSTDEV consteval auto
-//matIDMax() noexcept -> MatID
-//{
-//  return INT8_MAX;
-//}
-//
+//==============================================================================
+// Typedefs
+//==============================================================================
+
+// Floating point type
+#if UM2_ENABLE_FLOAT64
+using Float = double;
+#else
+using Float = float;
+#endif
+
+// Integer type
+#if UM2_ENABLE_INT64
+using Int = int64_t;
+HOSTDEV consteval auto
+intMax() noexcept -> Int
+{
+  return INT64_MAX;
+}
+#else
+using Int = int32_t;
+HOSTDEV consteval auto
+intMax() noexcept -> Int
+{
+  return INT32_MAX;
+}
+#endif
+
+// Integer type for material IDs.
+// We don't expect more than 127 materials, so we use int8_t.
+using MatID = int8_t;
+HOSTDEV consteval auto
+matIDMax() noexcept -> MatID
+{
+  return INT8_MAX;
+}
+
 ////==============================================================================
 //// Functions
 ////==============================================================================
