--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -2,7 +2,7 @@ add_subdirectory(./memory)
 add_subdirectory(./utility)
 add_subdirectory(./math)
 add_subdirectory(./algorithm)
-#add_um2_test(./numeric.cpp)
-#add_um2_test(./vector.cpp)
+add_subdirectory(./numeric)
+add_um2_test(./vector.cpp)
 #add_um2_test(./sto.cpp)
 #add_um2_test(./string.cpp)
