WIP: update config/stdlib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,9 +144,9 @@ endif()
 # Sources
 set(UM2_SOURCES
     "src/common/settings.cpp"
-    #"src/common/log.cpp"
-    #"src/common/sort.cpp"
-    #"src/math/stats.cpp"
+    "src/common/log.cpp"
+    "src/common/sort.cpp"
+    "src/math/stats.cpp"
     #"src/math/angular_quadrature.cpp"
     #    "src/geometry/morton_sort_points.cpp"
     #    "src/mesh/polytope_soup.cpp"
