--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -142,29 +142,28 @@ matIDMax() noexcept -> MatID
   return INT8_MAX;
 }
 
-////==============================================================================
-//// Functions
-////==============================================================================
-//
-//// For static_asserts which are always false.
-//template <class... T>
-//constexpr bool always_false = false;
-//
-//// Conditional cast
-//// if To and From are the same type, return x
-//// otherwise, return static_cast<To>(x)
-//// Should result in no-op for same types
-//template <typename To, typename From>
-//CONST HOSTDEV constexpr auto
-//condCast(From const x) noexcept -> To
-//{
-//  if constexpr (std::same_as<To, From>) {
-//    return x;
-//  } else {
-//    return static_cast<To>(x);
-//  }
-//}
-//
+//==============================================================================
+// Functions
+//==============================================================================
+
+// For static_asserts which are always false.
+template <class... T>
+constexpr bool always_false = false;
+
+// if To and From are the same type, return x
+// otherwise, return static_cast<To>(x)
+// Should result in no-op for same types
+template <typename To, typename From>
+CONST HOSTDEV constexpr auto
+castAsNeeded(From const x) noexcept -> To
+{
+  if constexpr (std::same_as<To, From>) {
+    return x;
+  } else {
+    return static_cast<To>(x);
+  }
+}
+
 //////==============================================================================
 ////// CUDA error checking
 //////==============================================================================
