--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -4,5 +4,5 @@ add_subdirectory(./math)
 add_subdirectory(./algorithm)
 add_subdirectory(./numeric)
 add_um2_test(./vector.cpp)
-#add_um2_test(./sto.cpp)
-#add_um2_test(./string.cpp)
+add_um2_test(./sto.cpp)
+add_um2_test(./string.cpp)
