--- a/tests/stdlib/CMakeLists.txt
+++ b/tests/stdlib/CMakeLists.txt
@@ -5,5 +5,5 @@ add_subdirectory(./algorithm)
 add_subdirectory(./numeric)
 add_um2_test(./vector.cpp)
 add_um2_test(./sto.cpp)
-#add_um2_test(./string_view.cpp)
+add_um2_test(./string_view.cpp)
 add_um2_test(./string.cpp)
