Debug through common

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,8 +144,7 @@ endif()
 # Sources
 set(UM2_SOURCES
     "src/common/settings.cpp"
-    #"src/common/log.cpp"
-    #"src/common/sort.cpp"
+    "src/common/log.cpp"
     #"src/math/stats.cpp"
     #"src/math/angular_quadrature.cpp"
     #"src/geometry/morton_sort_points.cpp"
