--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -17,6 +17,8 @@
 #cmakedefine01 UM2_ENABLE_ASSERTS
 #cmakedefine01 UM2_ENABLE_FLOAT64
 #cmakedefine01 UM2_ENABLE_INT64
+#cmakedefine01 UM2_ENABLE_BMI2
+#cmakedefine01 UM2_ENABLE_SIMD_P2
 
 // Minimum log level for compile-time filtering of log messages
 #define MIN_LOG_LEVEL @UM2_MIN_LOG_LEVEL@
