--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,11 +54,11 @@ option(UM2_USE_OPENMP       "Enable OpenMP"                     ON)
 option(UM2_USE_TBB          "Enable Intel TBB"                  ON)
 
 # Enable/disable features
-option(UM2_ENABLE_FASTMATH  "Enable fast math optimizations"    ON) # CPU and GPU
-option(UM2_ENABLE_FLOAT64   "Enable 64-bit floating point"      ON)
-option(UM2_ENABLE_INT64     "Enable 64-bit integers"            OFF) # For large meshes
-option(UM2_ENABLE_BMI2      "Enable BMI2 instructions"          ON) # For morton sorting
-option(UM2_ENABLE_SIMD_P2   "Enable SIMD for Point2 operations" OFF)
+option(UM2_ENABLE_FASTMATH  "Enable fast math optimizations"       ON) # CPU and GPU
+option(UM2_ENABLE_FLOAT64   "Enable 64-bit floating point"         ON)
+option(UM2_ENABLE_INT64     "Enable 64-bit integers"               OFF) # For large meshes
+option(UM2_ENABLE_BMI2      "Enable BMI2 instructions"             ON) # For morton sorting
+option(UM2_ENABLE_SIMD_VEC  "Enable GCC vector extensions for Vec" OFF)
 
 # Minimum log level for compile-time filtering of log messages
 # Off = 0,        // no messages
@@ -159,7 +159,7 @@ set(UM2_SOURCES
     "src/common/settings.cpp"
     "src/common/log.cpp"
     "src/math/angular_quadrature.cpp"
-    #"src/geometry/morton_sort_points.cpp"
+    "src/geometry/morton_sort_points.cpp"
     #    "src/mesh/polytope_soup.cpp"
     #    "src/mesh/face_vertex_mesh.cpp"
     #    "src/physics/cross_section.cpp"
