--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(./stdlib)
 add_subdirectory(./common)
 add_subdirectory(./math)
 add_subdirectory(./geometry)
-#add_subdirectory(./mesh)
+add_subdirectory(./mesh)
 #add_subdirectory(./physics)
 #add_subdirectory(./mpact)
 #add_subdirectory(./gmsh)
