--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,7 +160,7 @@ set(UM2_SOURCES
     "src/common/log.cpp"
     "src/math/angular_quadrature.cpp"
     "src/geometry/morton_sort_points.cpp"
-    "src/mesh/polytope_soup.cpp"
+    #"src/mesh/polytope_soup.cpp"
     #    "src/mesh/face_vertex_mesh.cpp"
     #    "src/physics/cross_section.cpp"
     #    "src/physics/nuclide.cpp"
