--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -3,3 +3,4 @@ add_um2_test(./stats.cpp)
 add_um2_test(./vec.cpp)
 add_um2_test(./mat.cpp)
 add_um2_test(./angular_quadrature.cpp)
+add_um2_test(./cubic_equation.cpp)
